# pyr-lac-thermometry-study

./: .gitignore  README.md
AnalysisNotebooks/: 7T_hyperpolarized_calibrations_example.ipynb  Animal_CSI_example.ipynb  Animal_CSI_pipeline.ipynb  Animal_slicespectroscopy_example.ipynb  ArtificialFits_Simulation_analysis.ipynb  ArtificialFits_Simulation_pipeline.ipynb  Human_13C_healthy_brain_CSI_analysis.ipynb  Human_13C_healthy_brain_CSI_fitting_pipeline.py  Human_13C_healthy_brain_slicespec_analysis.ipynb  Human_13C_healthy_brain_slicespec_summary_analysis.ipynb  Human_13C_healthy_slicespec_fitting.py  Human_GBM_analysis.ipynb  Human_GBM_fitting_pipeline.ipynb  Human_Healthy_CSI_analysing_prefitted_data.ipynb  Human_brain_slicespec_fitting_pipeline.py  Human_renal_analysis.ipynb  Human_renal_fitting_pipeline.ipynb
AnalysisNotebooks/old/: Human_13C_temp_summary.ipynb  Human_GBM_Fitting.ipynb  Human_brain_slicespec_analysis_prefitted_data.ipynb
hypermri/: LICENSE  README.md  dev-requirements.txt  pyproject.toml  requirements.txt  tox.ini
hypermri/src/hypermri/: __init__.py  brukerdir.py  brukerexp.py
hypermri/src/hypermri/config/: SmartLoadMeasurements.json
hypermri/src/hypermri/functions/: __init__.py  specsimulator.py  spectroscopy.py
hypermri/src/hypermri/sequences/: BSSFP.py  CSI.py  FLASH.py  GeoffSlcSpec.py  NSPECT.py  RARE.py  Singlepulse.py  __init__.py  base_anatomy.py  base_spectroscopy.py  gNSPECT_MS.py
hypermri/src/hypermri/utils/: __init__.py  image_segmenter_3d.py  utils_anatomical.py  utils_bssfp_analysis.py  utils_fexi.py  utils_fitting.py  utils_general.py  utils_interpolation.py  utils_logging.py  utils_sequences.py  utils_spectroscopy.py  utils_statistics.py  utils_sv_spectroscopy.py
